k8s/wegmans-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wegmanspos-frontendapp-pod
  labels:
    app: wegmansposfrontendserviceapp
spec:
  containers:
    - name: wegmanspos-frontendappcontainer
      image: //imagename
      ports:
        - containerPort: 3000
