k8s/wegmans-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wegmanspos-frontend-service
spec:
  selector:
    app: wegmansposfrontendserviceapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
